WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 114067
REGRESSION (
r147502
): Animations of CA filters broken
https://bugs.webkit.org/show_bug.cgi?id=114067
Summary
REGRESSION (r147502): Animations of CA filters broken
Simon Fraser (smfr)
Reported
2013-04-05 15:01:03 PDT
Created
attachment 196686
[details]
Testcase Animations of CA filters are broken after
r147502
. See testcase.
Attachments
Testcase
(2.59 KB, text/html)
2013-04-05 15:01 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch to Revert r147502
(2.48 KB, patch)
2013-04-05 16:46 PDT
,
Max Vujovic
no flags
Details
Formatted Diff
Diff
Patch to Revert r147502
(105.97 KB, patch)
2013-04-05 16:48 PDT
,
Max Vujovic
dino
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-04-05 15:01:40 PDT
<
rdar://problem/13590260
>
Max Vujovic
Comment 2
2013-04-05 16:46:55 PDT
Created
attachment 196699
[details]
Patch to Revert
r147502
Max Vujovic
Comment 3
2013-04-05 16:48:53 PDT
Created
attachment 196701
[details]
Patch to Revert
r147502
Oops. Wrong patch before.
WebKit Commit Bot
Comment 4
2013-04-05 17:28:06 PDT
Comment on
attachment 196701
[details]
Patch to Revert
r147502
Rejecting
attachment 196701
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 196701, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 147818 = 3980d39647905dfad9ac41f66b3c7bdee5910c77
r147819
= fc3d5a36b047fa3df3bff756cab0aff81e1a7d47
r147820
= 1caa93af149d0727d70ca03f21e65e81d5da12f7 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Total errors found: 0 in 0 files Full output:
http://webkit-commit-queue.appspot.com/results/17526193
Max Vujovic
Comment 5
2013-04-08 11:09:23 PDT
Manually committed revert of
r147502
in
http://trac.webkit.org/changeset/147937
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug