REGRESSION (r147502): Animations of CA filters broken https://bugs.webkit.org/show_bug.cgi?id=114067

Reviewed by Dean Jackson.

Revert r147502 [1] because it broke CA filter animations.

[1]: http://trac.webkit.org/changeset/147502

Source/WebCore:

* platform/graphics/IntRectExtent.h:
(WebCore::IntRectExtent::isZero):
(IntRectExtent):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::needsCompositingLayersRebuiltForOverflow):
(WebCore):
(WebCore::RenderLayer::styleChanged):
* rendering/RenderLayer.h:
(RenderLayer):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateFilters):
(WebCore::RenderLayerBacking::updateGraphicsLayerGeometry):
* rendering/RenderLayerBacking.h:
(RenderLayerBacking):
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::calculateCompositedBounds):

Source/WTF:

* wtf/Platform.h:

LayoutTests:

* compositing/filters/sw-layer-overlaps-hw-shadow-expected.txt:
* compositing/filters/sw-nested-shadow-overlaps-hw-nested-shadow-expected.txt:
* compositing/filters/sw-shadow-overlaps-hw-layer-expected.txt:
* compositing/filters/sw-shadow-overlaps-hw-shadow-expected.txt:
* css3/filters/composited-layer-bounds-after-sw-blur-animation-expected.txt: Removed.
* css3/filters/composited-layer-bounds-after-sw-blur-animation.html: Removed.
* css3/filters/composited-layer-bounds-with-composited-blur-expected.txt: Removed.
* css3/filters/composited-layer-bounds-with-composited-blur.html: Removed.
* css3/filters/composited-layer-child-bounds-after-composited-to-sw-shadow-change-expected.txt: Removed.
* css3/filters/composited-layer-child-bounds-after-composited-to-sw-shadow-change.html: Removed.
* css3/filters/composited-layer-promotion-after-outset-overlap-change-using-composited-shadow-expected.txt: Removed.
* css3/filters/composited-layer-promotion-after-outset-overlap-change-using-composited-shadow.html: Removed.
* css3/filters/composited-layer-promotion-after-outset-overlap-change-using-sw-shadow-expected.txt: Removed.
* css3/filters/composited-layer-promotion-after-outset-overlap-change-using-sw-shadow.html: Removed.
* css3/filters/filter-change-repaint-composited-expected.png:
* css3/filters/filter-change-repaint-composited.html:
* platform/qt/TestExpectations:



Canonical link: https://commits.webkit.org/132562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147937 268f45cc-cd09-0410-ab3c-d52691b4dbfc