Source/WebCore/platform/graphics/IntRectExtent.h
@@ -66,8 +66,6 @@ public:
     int left() const { return m_left; }
     void setLeft(int left) { m_left = left; }
 
-    bool isZero() const { return !left() && !right() && !top() && !bottom(); }
-
     void expandRect(LayoutRect& rect) const
     {
         if (isZero())
@@ -78,6 +76,8 @@ public:
     }
 
 private:
+    bool isZero() const { return !left() && !right() && !top() && !bottom(); }
+
     int m_top;
     int m_right;
     int m_bottom;
